# stock-back-test

./: .gitignore  ENG_DESIGN.md  PLAN.md  PRD.md  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: app.js  engine.js  index.html  report.js  runs.json  style.css
docs/runs/: 20260517-013420_dca_SPY.html  20260517-013421_buy_hold_SPY.html  20260517-013421_dca_QQQ.html  20260517-034925_buy_hold_SPY.html  20260517-034926_dca_SPY.html  20260517-034927_dca_btd_SPY.html  20260517-034928_buy_hold_QQQ.html  20260517-034928_rsi_SPY.html  20260517-034929_dca_QQQ.html  20260517-034929_fear_greed_SPY.html  20260517-040323_buy_hold_SPY.html  20260517-040324_dca_SPY.html  20260517-040324_dca_btd_SPY.html  20260517-040325_rsi_SPY.html  20260517-040326_buy_hold_QQQ.html  20260517-040326_dca_QQQ.html  20260517-040327_fear_greed_SPY.html  20260517-042110_buy_hold_SPY.html  20260517-042111_dca_SPY.html  20260517-042111_dca_btd_SPY.html  20260517-042112_rsi_SPY.html  20260517-042113_buy_hold_QQQ.html  20260517-042114_dca_QQQ.html  20260517-042114_fear_greed_SPY.html  20260517-044023911_buy_hold_SPY.html  20260517-044024651_dca_SPY.html  20260517-044025415_dca_btd_SPY.html  20260517-044026190_rsi_SPY.html  (+22 more)
scripts/: README.md  _js_engine_runner.js  check_engine_parity.py
src/: cli.py  engine.py  manifest.py  metrics.py  report.py
src/data/: fear_greed.py  (+1 more)
tests/: conftest.py  test_dca_btd.py  test_dca_fg.py  test_dca_fg_rebalance.py  test_engine.py  test_fear_greed_loader.py  test_fear_greed_strategy.py  test_metrics.py  test_report.py  test_rsi.py  test_strategies.py
(+11 files in other folders)
