[project]
name = "stock-back-test"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "pyarrow>=24.0.0",
    "vectorbt>=0.28.2",
    "yfinance>=1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
markers = [
    "integration: slow tests that need external prerequisites (Node, local data caches). Opt in with `-m integration`.",
]
# Default run skips integration tests to keep `pytest` fast. Run the full suite
# explicitly with `uv run pytest -m ''` or just the integration tests with
# `uv run pytest -m integration`.
addopts = "-m 'not integration'"
# Ensure `src` and `scripts` are importable when the project itself isn't
# installed as a package (e.g. CI runs `uv sync --no-install-project`).
pythonpath = ["."]
